test/expect/cmd.gccxml-and-c11.stderr.txt
^error: '--castxml-gccxml' does not work with c11$
